--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -15,7 +15,6 @@ env:
   MANIFEST_PATH: io.github.grillo_delmal.inochi-session.yml
   FLATPAK_BUNDLE: inochi-session
   FLATPAK_BRANCH: devtest
-  DESTINATION_GITHUB_USERNAME: grillo-delmal 
   DESTINATION_REPOSITORY_NAME: inochi2d-flatpak-devtest
   FLATPAK_BUILD_DIR: build-dir
   FLATPAK_BUILD_REPO: build-repo
@@ -72,6 +71,7 @@ jobs:
         name: inochi-session-source
         path: .flatpak-builder/build/Inochi-Session-Source-1/*
         retention-days: 1
+        include-hidden-files: true
 
   publish-source-nightly:
     runs-on: ubuntu-latest
@@ -323,13 +323,19 @@ jobs:
     steps:
     - run: echo "REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
 
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        repository: ${{ github.actor }}/${{ env.DESTINATION_REPOSITORY_NAME }}
+        path: 'gh-pages'
+        token: ${{ secrets.PAT }}
+
     - name: Update static index
       env:
         REGISTRY_AUTH_FILE: /tmp/auth.json
       run: |
         export IMAGE_REPOSITORY=$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]')
         set -x
-        git clone -b main https://github.com/$DESTINATION_GITHUB_USERNAME/$DESTINATION_REPOSITORY_NAME.git gh-pages
         mkdir -p ./gh-pages/repos
         skopeo inspect docker://ghcr.io/${IMAGE_REPOSITORY}:$FLATPAK_BRANCH | \
           jq --arg github_repository "${GITHUB_REPOSITORY}" '. as $img | { "Name": $github_repository, "Images": [$img] }' > \
@@ -355,16 +361,49 @@ jobs:
 
     - name: Push to repository
       if: steps.is-updated.outputs.updated
-      uses: cpina/github-action-push-to-another-repository@main
-      env:
-        API_TOKEN_GITHUB: ${{ secrets.PAT }}
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        git -C gh-pages commit --allow-empty -am "Update index $(date -u +%Y%m%d%H%M)"
+        git -C gh-pages push
+
+  publish-nightly-rpm:
+    runs-on: ubuntu-latest
+    needs: build-base
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
       with:
-        source-directory: 'gh-pages'
-        destination-github-username: ${{ env.DESTINATION_GITHUB_USERNAME }}
-        destination-repository-name: ${{ env.DESTINATION_REPOSITORY_NAME }}
-        user-email: github-actions[bot]@users.noreply.github.com
-        commit-message: Update index
-        target-branch: main
+        path: 'main'
+
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        repository: ${{ github.actor }}/inochi-session-nightly-rpm
+        path: 'inochi-session-nightly'
+        token: ${{ secrets.PAT }}
+    
+    - name: Download source files
+      uses: actions/download-artifact@v4
+      with:
+        name: inochi-session-source
+        path: 'src/'
+
+    - name: Update repo
+      run : |
+        pushd inochi-session-nightly
+        ./update.sh $(source ../main/scripts/gitver.sh; git_version ../src) $(source ../main/scripts/gitver.sh; git_build ../src) $(git -C ../src rev-parse --short=7 HEAD)
+        popd
+        cp -f src/dub.selections.json inochi-session-nightly/dub.selections.json
+
+    - name: Push rpm repo
+      run: |
+        git config --global user.name 'Sync Process'
+        git config --global user.email 'sync-bot@users.noreply.github.com'
+        git -C inochi-session-nightly commit --allow-empty -am "RPM Update $(date -u +%Y%m%d%H%M)"
+        git -C inochi-session-nightly push
 
   build-linux-zip:
     runs-on: ubuntu-20.04
@@ -388,6 +427,8 @@ jobs:
         mv .dub/packages/local-packages.linux.json .dub/packages/local-packages.json
 
         dub add-path .flatpak-dub
+        dub add-local .flatpak-dub/semver/*/semver;
+        dub add-local .flatpak-dub/gitver/*/gitver;
 
         sudo apt install libsdl2-dev libfreetype6-dev
     
@@ -405,6 +446,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: inochi-session-linux-x86_64
+        include-hidden-files: true
         path: 'out/'
 
   publish-linux-zip-nightly:
@@ -489,6 +531,8 @@ jobs:
         mv .dub/packages/local-packages.win.json .dub/packages/local-packages.json
 
         dub add-path .flatpak-dub
+        dub add-local (Get-Item .flatpak-dub\semver\*\semver\dub.sdl).DirectoryName
+        dub add-local (Get-Item .flatpak-dub\gitver\*\gitver\dub.sdl).DirectoryName
 
     - name: 'Build Inochi Session'
       run: |
@@ -515,6 +559,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: inochi-session-win32-x86_64
+        include-hidden-files: true
         path: 'out/'
 
   publish-windows-zip-nightly:
@@ -675,6 +720,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: inochi-session-macos
+        include-hidden-files: true
         path: 'out/'
 
   publish-macos-dmg-nightly:
