--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch: # can be manually dispatched under GitHub's "Actions" tab 
 
 env:
-  REPO_NAME: inochi-session-nightly
+  REPO_NAME: inochi-session-devtest
 
 jobs:
   release-check:
